Fix 'FF Scouter' on Firefox causing visual issues on the RR page when honor were disabled.

--- a/extension/scripts/features/ff-scouter/ttFFScouter.css
+++ b/extension/scripts/features/ff-scouter/ttFFScouter.css
@@ -21,8 +21,6 @@
 
 .tt-ff-scouter-indicator {
 	position: relative;
-	display: block;
-	padding: 0;
 }
 
 .tt-ff-scouter-vertical-line-low-upper,
